--- a/src/index.css
+++ b/src/index.css
@@ -84,17 +84,21 @@ nav
     margin-left: 10px;
   }
   
-  .btn1 {
+  .btn1 { 
     background: transparent;
     color:  rgba(0, 122, 255, 0.65);
-    border: 1px solid  rgba(0, 122, 255, 0.65);
-    transition: all .3s ease;
+    filter: drop-shadow(0);
+    font-weight: bold;
+    transition: all .3s ease; 
+    padding: 1.5vh 3vh;
+    border:  1px solid rgba(0, 122, 255, 0.65);
   }
   
   .btn1:hover {
     transform: scale(1.125);
-    color: rgba(0, 0, 0, 0.9);
-    border-color: rgba(0, 0, 0, 0.9);
+    color: rgba(255, 255, 255, 0.9);
+    /* border-color: rgba(0, 0, 0, 0.9); */
+    border:  rgba(0, 122, 255, 0.65);
   }
   
   .btn.fill {
@@ -103,12 +107,15 @@ nav
     filter: drop-shadow(0);
     font-weight: bold;
     transition: all .3s ease; 
+    padding: 1.5vh 3vh;
+    border: none;
   }
   
   .btn.fill:hover {
     transform: scale(1.125);  
     border-color: rgba(255, 255, 255, 0.9);
     filter: drop-shadow(0 10px 5px rgba(0,0,0,0.125));
+    border: none;
   }
   
   html {
