--- a/src/styles/components/Admin/Sidebar.css
+++ b/src/styles/components/Admin/Sidebar.css
@@ -107,13 +107,27 @@ body {
   white-space: nowrap;
   padding: 15px 10px;
   text-decoration: none;
-  transition: 0.2s ease;
+  transition: color 0.2s ease, background 0.2s ease, border 0.2s ease, box-shadow 0.2s ease;
+  border: 1px solid transparent;
 }
 
 .sidebar-links li a:hover {
-  color: #161a2d;
-  background: #fff;
+  color: #5fb6fd;
+  background: linear-gradient(#333933, #222922);
   border-radius: 4px;
+  border: 1px solid #0991FF;
+  animation: glow 0.8s ease-out infinite alternate;
+}
+
+@keyframes glow {
+  0% {
+    border-color: #0991FF;
+    box-shadow: 0 0 5px rgba(0, 145, 255, 0.2), inset 0 0 5px rgba(0, 0, 0, 0.1);
+  }
+  100% {
+    border-color: #0991FF;
+    box-shadow: 0 0 20px rgba(0, 145, 255, 0.6), inset 0 0 10px rgba(0, 145, 255, 0.4);
+  }
 }
 
 .user-account {
@@ -131,7 +145,7 @@ body {
 .user-profile img {
   width: 42px;
   border-radius: 50%;
-  border: 2px solid #fff;
+  border: 1px solid #fff;
 }
 
 .user-profile h3 {
@@ -149,7 +163,11 @@ body {
   white-space: nowrap;
 }
 
+.user-detail h3, .user-detail span{
+  color: #ffffff;
+}
+
 .sidebar:hover .user-account {
-  background: #fff;
+  background: linear-gradient(#333933, #222922);
   border-radius: 4px;
 }
