--- a/src/styles/pages/Login.css
+++ b/src/styles/pages/Login.css
@@ -72,7 +72,7 @@ form button {
 }
 
 .field input:focus {
-  color: #0991FF;
+  color: #ffffff;
   border-color: #0991FF;
   box-shadow: 0 0 5px rgba(0, 145, 255, 0.2), inset 0 0 5px rgba(0, 145, 255, 0.1);
   background: linear-gradient(#333933, #222922);
@@ -99,7 +99,7 @@ button {
 }
 
 button:hover {
-  color: #0991FF;
+  color: #ffffff;
   border: 1px solid #0991FF;
   box-shadow: 0 0 5px rgba(0, 145, 255, 0.3), 0 0 10px rgba(0, 145, 255, 0.2),
     0 0 15px rgba(0, 145, 255, 0.1), 0 2px 0 black;
