--- a/src/styles/pages/Signup.css
+++ b/src/styles/pages/Signup.css
@@ -1,6 +1,16 @@
 @import url('https://fonts.googleapis.com/css?family=Poppins&display=swap');
 
-body {
+/* body {
+  display: flex;
+  height: 100vh;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+  margin: 0;
+  background-color: #f0f0f0;
+} */
+
+.signupe-page-body{
   display: flex;
   height: 100vh;
   text-align: center;
