--- a/src/index.css
+++ b/src/index.css
@@ -96,9 +96,9 @@ nav
   
   .btn1:hover {
     transform: scale(1.125);
-    color: rgba(255, 255, 255, 0.9);
-    /* border-color: rgba(0, 0, 0, 0.9); */
-    border:  rgba(0, 122, 255, 0.65);
+    color:white;
+    /* border: 1px solid white; */
+    background:  rgba(0, 122, 255, 0.65);
   }
   
   .btn.fill {
@@ -115,7 +115,9 @@ nav
     transform: scale(1.125);  
     border-color: rgba(255, 255, 255, 0.9);
     filter: drop-shadow(0 10px 5px rgba(0,0,0,0.125));
-    border: none;
+    border:  1px solid rgba(0, 122, 255, 0.65);
+    background: transparent;
+    color:  rgba(0, 122, 255, 0.65);
   }
   
   html {
