--- a/src/styles/pages/Admin/Dashboard.css
+++ b/src/styles/pages/Admin/Dashboard.css
@@ -1,7 +1,6 @@
 .admin-dashboard-home-page {
   flex-grow: 1;
   padding: 20px;
-  /* background-color: #917d7d; */
   min-height: 100vh;
   min-width: auto;
   margin-left: 85px;
@@ -15,13 +14,7 @@
   margin-left: 260px;
 }
 
-.admin-dashboard-box-details-row-view{
-  display: flex;
-  flex-wrap: nowrap;
-  overflow-x: auto;
-}
-
-.admin-dashboard-detailed-box{
+/* .admin-dashboard-detailed-box{
   margin-top: 5vh;
   margin-left: 20px;
   height: 20vh;
@@ -31,7 +24,7 @@
   border-radius: 15px;
   border: 3px solid #0991FF;
   box-shadow: 0 0 20px rgba(0, 145, 255, 0.6), inset 0 0 10px rgba(0, 145, 255, 0.4);
-}
+} */
 
 /* .home-content {
   margin-top: 80px;
