--- a/src/index.css
+++ b/src/index.css
@@ -113,9 +113,9 @@ nav
   
   .btn.fill:hover {
     transform: scale(1.125);  
-    border-color: rgba(255, 255, 255, 0.9);
-    filter: drop-shadow(0 10px 5px rgba(0,0,0,0.125));
-    border: none;
+    background: transparent;
+    color:  rgba(0, 122, 255, 0.65);
+    border:  1px solid rgba(0, 122, 255, 0.65);
   }
   
   html {
