--- a/src/styles/pages/Login.css
+++ b/src/styles/pages/Login.css
@@ -100,7 +100,7 @@ form button {
   }
 }
 
-button {
+.login-button {
   margin-top: 30px;
   border-radius: 5px !important;
   font-weight: 600;
@@ -108,7 +108,7 @@ button {
   cursor: pointer;
 }
 
-button:hover {
+.login-button:hover {
   color: #ffffff;
   border: 1px solid #0991FF;
   box-shadow: 0 0 5px rgba(0, 145, 255, 0.3), 0 0 10px rgba(0, 145, 255, 0.2),
