--- a/src/styles/components/SuperAdmin/Sidebar.css
+++ b/src/styles/components/SuperAdmin/Sidebar.css
@@ -137,11 +137,13 @@ body {
 .user-profile h3 {
   font-size: 1rem;
   font-weight: 600;
+  color: black;
 }
 
 .user-profile span {
   font-size: 0.775rem;
   font-weight: 600;
+  color: #000000;
 }
 
 .user-detail {
