--- a/src/styles/pages/Admin/Dashboard.css
+++ b/src/styles/pages/Admin/Dashboard.css
@@ -56,6 +56,9 @@
   background-color: #fff;
   margin-left: 10px;
   border-radius: 15px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 /* .admin-dashboard-detailed-box{
