SuperAdmin Design change

--- a/src/styles/pages/Login.css
+++ b/src/styles/pages/Login.css
@@ -52,7 +52,7 @@
 
 .text {
   font-size: 30px;
-  color: #c7c7c7;
+  color: #ffffff;
   font-weight: 600;
   letter-spacing: 2px;
 }
@@ -75,17 +75,17 @@ form button {
   color: #ffffff;
   padding: 0 15px;
   border-radius: 5px;
-  border: 1px solid #444;
+  border: 1px solid #ffffff;
   caret-color: #0991FF;
   /* background: linear-gradient(#333, #222); */
   background: black;
 }
 
 .field input:focus {
-  color: #ffffff;
+  color: #0991FF;
   border-color: #0991FF;
   box-shadow: 0 0 5px rgba(0, 145, 255, 0.2), inset 0 0 5px rgba(0, 145, 255, 0.1);
-  background: linear-gradient(#333933, #222922);
+  background: black;
   animation: glow 0.8s ease-out infinite alternate;
 }
 
@@ -117,7 +117,7 @@ button:hover {
 
 .link {
   margin-top: 25px;
-  color: #868686;
+  color: #ffffff;
 }
 
 .link a {
