--- a/src/styles/pages/landingPage/Contact.css
+++ b/src/styles/pages/landingPage/Contact.css
@@ -36,11 +36,9 @@
   padding: 40px;
   margin-top: 70px;
   text-align: justify;
-  border: 4px solid #000000;
+  border: 4px solid #0991FF;
   backdrop-filter: blur(15px);
   -webkit-backdrop-filter: blur(15px);
-  /* background: linear-gradient(135deg, #000000, #074f8a); */
-  background: black;
 }
 
 .contact-logo {
@@ -51,8 +49,8 @@
 }
 
 .contact-logo {
-  width: 350px;
-  height: 500px;
+  width: 420px;
+  height: 380px;
 
 }
 
@@ -69,13 +67,13 @@ form {
 h2 {
   font-size: 2rem;
   margin-bottom: 20px;
-  color: #ffffff;
+  color: #000000;
 }
 
 .contact-input-field {
   position: relative;
   width: 45%;
-  border-bottom: 2.5px solid #ffffff;
+  border-bottom: 2.5px solid #0991FF;
   margin: 20px 30px;
 }
 
@@ -84,7 +82,7 @@ h2 {
   top: 50%;
   left: 0;
   transform: translateY(-50%);
-  color: #ffffff;
+  color: #000000;
   font-size: 16px;
   pointer-events: none;
   transition: 0.25s ease;
@@ -97,7 +95,7 @@ h2 {
   border: none;
   outline: none;
   font-size: 16px;
-  color: #ffffff;
+  color: #000000;
 }
 
 .contact-input-field input:focus ~ label,
@@ -108,12 +106,12 @@ h2 {
 }
 
 .contact-wrapper a {
-  color: #ffffff;
+  color: #efefef;
   text-decoration: none;
 }
 
 .contact-wrapper a:hover {
-  text-decoration: underline #ffffff;
+  text-decoration: underline #0991FF;
 }
 
 button {
@@ -144,7 +142,7 @@ button:hover {
 
 .textarea {
   border-radius: 15px;
-  border: 2px solid #ffffff;
+  border: 2px solid #0991FF;
   margin: 20px 30px;
 }
 
@@ -155,7 +153,7 @@ button:hover {
   border: none;
   outline: none;
   font-size: 16px;
-  color: #ffffff;
+  color: #000000;
 }
 
 .textarea label {
@@ -163,7 +161,7 @@ button:hover {
   top: 50%;
   left: 0;
   transform: translateY(-50%);
-  color: #ffffff;
+  color: #000000;
   font-size: 16px;
   pointer-events: none;
   transition: 0.25s ease;
@@ -174,8 +172,4 @@ button:hover {
   font-size: 0.8rem;
   top: 10px;
   transform: translateY(-140%);
-}
-
-.des{
-  color: white;
 }
